# claude-ai-repo-coder

./: .gitignore  README.md  WENDE_README.md  api.py  arg_parser.py  claude_client.py  color_printer.py  config.py  main.py  package-lock.json  pyproject.toml  repo_analyzer.py  request_logger.py  todo.md  token_estimator.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  AuthProvider.js  CodeBlock.jsx  ConfirmationDialog.jsx  CopyButton.jsx  GlobalStateContext.js  Header.jsx  Layout.js  LoadingSpinner.jsx  Login.jsx  Profile.jsx  ResponseDisplay.jsx  Routes.js  SignUp.jsx  index.css  index.js  styles.css  theme.js
frontend/src/components/: AnalysisResults.jsx  Button.jsx  Card.jsx  CodeAnalyzer.jsx  CodeBlock.jsx  ConfirmationDialog.jsx  ConversationHistory.jsx  FollowUpForm.jsx  NavigationDrawer.jsx  ResponseDisplay.jsx  SearchForm.jsx
frontend/src/services/: api.js
