[project]
name = "claude-ai-repo-coder"
version = "0.1.0"
description = ""
authors = [{ name = "Klemens Wisser", email = "wisserklemens@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "anthropic[vertex]>=0.36.0,<0.37",
    "google-cloud-aiplatform>=1.70.0,<2",
    "tiktoken>=0.8.0,<0.9",
    "colorama>=0.4.6,<0.5",
    "flask[async]>=3.0.3,<4",
    "flask-cors>=5.0.0,<6",
    "python-dotenv>=1.0.1,<2",
    "firestore>=0.0.8,<0.0.9",
    "httpx>=0.27.0,<0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
